# kenning-bare-metal-iree-runtime

./: .buildinfo  .ci.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  _config.yml  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  report.doctree
.github/scripts/: readme-tests.sh
.github/workflows/: ci.yml  docker.yml
_sources/: report.md  report.md.txt
build_tools/: configure_cmake.sh  configure_cmake_in_docker.sh  configure_git_url_rewrite.sh  run_simulation.sh
docker-image/: Dockerfile
iree-runtime/: CMakeLists.txt  iree_runtime.c  iree_runtime.h
iree-runtime/utils/: CMakeLists.txt  adxl345.c  adxl345.h  base_input_reader.c  i2c.c  i2c.h  input_reader.h  iree_wrapper.c  iree_wrapper.h  model.c  model.h  protocol.c  protocol.h  sensor.c  sensor.h  sensor_input_reader.c  uart.c  uart.h  utils.c  utils.h
kenning-scenarios/: renode-iree-bare-metal-inference.json  renode-magic-wand-iree-bare-metal-inference-prebuilt.json  renode-magic-wand-iree-bare-metal-inference-test.json  renode-magic-wand-iree-bare-metal-inference.json  renode-person-detection-iree-bare-metal-inference-prebuilt.json  renode-person-detection-iree-bare-metal-inference.json
renode-tests/: render_kenning_report.sh  run_kenning_inference_tester.sh  test_runtime.robot
renodetests/: inference_test.robot  run_kenning_inference_tester.sh  test_inference.robot  test_runtime.robot
sim/config/: springbok.resc  springbok_accelerometer.resc
unit-tests/: project.yml
unit-tests/tests/: test_adxl345.c  test_i2c.c  test_model.c  test_protocol.c  test_runtime.c  test_sensor.c  test_sensor_input_reader.c  test_uart.c
unit-tests/tests/mocks/: partial_iree_wrapper.h  sensor_mock.h  springbok.h
unittests/: project.yml
unittests/tests/: test_model.c  test_protocol.c  test_runtime.c  test_uart.c
unittests/tests/mocks/: iree_wrapper.c  iree_wrapper.h  partial_iree_wrapper.h  springbok.h
